# spaceflights

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
conf/prod/: catalog.yml
notebooks/: first-exploration.ipynb  model_training.ipynb
src/spaceflights/: settings.py
src/spaceflights/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/spaceflights/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
tests/pipelines/data_science/: test_pipeline.py
